<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/devices">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_current_device"
                    android:title="@string/no_device_added_yet" />
                <item
                    android:id="@+id/nav_add_new_device"
                    android:icon="@drawable/ic_menu_add"
                    android:title="@string/add_new_device" />
            </group>
        </menu>
    </item>

    <item android:title="@string/misc">
        <menu>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_view_source_code"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/github" />
        </menu>
    </item>

</menu>
