<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.labuda.tempmonitor.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/device_name"
            android:text="@string/device_name_input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temperature_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperaturey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <RelativeLayout
                android:id="@+id/temperature_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <pl.pawelkleczkowski.customgauge.CustomGauge
                    android:id="@+id/temperature_gauge"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    app:gaugePointStartColor="#0000FF"
                    app:gaugePointEndColor="#FF0000"
                    app:gaugePointSize="6"
                    app:gaugeStartAngle="135"
                    app:gaugeStrokeCap="ROUND"
                    app:gaugeStrokeColor="#DCDCDC"
                    app:gaugeStrokeWidth="10dp"
                    app:gaugeSweepAngle="270" />

                <TextView
                    android:id="@+id/current_temperature_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/temperature_gauge"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="85dp"
                    android:text="°C"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/temperature_gauge"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="18dp"
                    android:text="00.00"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_temperature_start_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/temperature_gauge"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="0dp"
                    android:layout_alignLeft="@id/temperature_gauge"
                    android:text="00"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_temperature_end_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/temperature_gauge"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="0dp"
                    android:layout_alignRight="@id/temperature_gauge"
                    android:text="00"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <RelativeLayout
                android:id="@+id/humidity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <pl.pawelkleczkowski.customgauge.CustomGauge
                    android:id="@+id/humidity_gauge"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    app:gaugePointStartColor="#0000FF"
                    app:gaugePointEndColor="#FF0000"
                    app:gaugePointSize="0"
                    app:gaugeStartAngle="135"
                    app:gaugeStrokeCap="ROUND"
                    app:gaugeStrokeColor="#DCDCDC"
                    app:gaugeStrokeWidth="10dp"
                    app:gaugeStartValue="0"
                    app:gaugeEndValue="10000"
                    app:gaugeSweepAngle="270" />

                <TextView
                    android:id="@+id/current_humidity_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/humidity_gauge"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="85dp"
                    android:text="%"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/humidity_gauge"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="18dp"
                    android:text="00.00"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_humidity_start_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/humidity_gauge"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="0dp"
                    android:layout_alignLeft="@id/humidity_gauge"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_humidity_end_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/humidity_gauge"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="0dp"
                    android:layout_alignRight="@id/humidity_gauge"
                    android:text="100"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>




    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>

